--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
@@ -17,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
